@@ -35,7 +35,7 @@
 		<br/>
 		<span>http://logtalk.org/</span>
 	</p>
-	<p class="date">Last updated on March 4, 2012</p>
+	<p class="date">Last updated on March 27, 2012</p>
 </div>
 
 <div class="toc">
